@@ -2,6 +2,16 @@
 
         Reviewed by Eric Seidel.
 
+        svn-apply may not handle git patches created by bugzilla-tool
+        https://bugs.webkit.org/show_bug.cgi?id=31457
+
+        * Scripts/modules/scm.py:
+        * Scripts/modules/scm_unittest.py:
+
+2009-11-15  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Eric Seidel.
+
         bugzilla-tool should post git binary diff
         https://bugs.webkit.org/show_bug.cgi?id=31458
 
